// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should get a stop status 1`] = `
Array [
  Object {
    "direction": "Inbound",
    "forecastsEnabled": true,
    "operatingNormally": true,
    "statusMessage": "Services operating normally",
  },
  Object {
    "direction": "Outbound",
    "forecastsEnabled": true,
    "operatingNormally": true,
    "statusMessage": "Services operating normally",
  },
]
`;

exports[`It should get all stops 1`] = `
Array [
  Object {
    "code": "TPT",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.34835,
    "line": "Luas Red Line",
    "longitute": -6.22925833333333,
    "name": "The Point",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "The Point",
  },
  Object {
    "code": "SDK",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.3488222222222,
    "line": "Luas Red Line",
    "longitute": -6.23714722222222,
    "name": "Spencer Dock",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Spencer Dock",
  },
  Object {
    "code": "BRO",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.37223956,
    "line": "Luas Green Line",
    "longitute": -6.29768465,
    "name": "Broombridge",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Broombridge",
  },
  Object {
    "code": "CAB",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.36433419,
    "line": "Luas Green Line",
    "longitute": -6.28196899,
    "name": "Cabra",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Cabra",
  },
]
`;

exports[`It should get all stops for a line 1`] = `
Array [
  Object {
    "code": "BRO",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.37223956,
    "line": "Luas Green Line",
    "longitute": -6.29768465,
    "name": "Broombridge",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Broombridge",
  },
  Object {
    "code": "CAB",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.36433419,
    "line": "Luas Green Line",
    "longitute": -6.28196899,
    "name": "Cabra",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Cabra",
  },
]
`;

exports[`It should get real time information for a stop 1`] = `
Array [
  Object {
    "arrivingInMinutes": 9,
    "destination": "Broombridge",
    "direction": "Inbound",
    "expectedArrivalTime": "2019-09-23T17:57:19.000+01:00",
  },
  Object {
    "arrivingInMinutes": 17,
    "destination": "Broombridge",
    "direction": "Inbound",
    "expectedArrivalTime": "2019-09-23T18:05:19.000+01:00",
  },
  Object {
    "arrivingInMinutes": 0,
    "destination": "Sandyford",
    "direction": "Outbound",
    "expectedArrivalTime": "2019-09-23T17:48:19.000+01:00",
  },
  Object {
    "arrivingInMinutes": 9,
    "destination": "Sandyford",
    "direction": "Outbound",
    "expectedArrivalTime": "2019-09-23T17:57:19.000+01:00",
  },
  Object {
    "arrivingInMinutes": 17,
    "destination": "Sandyford",
    "direction": "Outbound",
    "expectedArrivalTime": "2019-09-23T18:05:19.000+01:00",
  },
]
`;

exports[`It should get real time information for a stop filtering by a given direction 1`] = `
Array [
  Object {
    "arrivingInMinutes": 9,
    "destination": "Broombridge",
    "direction": "Inbound",
    "expectedArrivalTime": "2019-09-23T17:57:19.000+01:00",
  },
  Object {
    "arrivingInMinutes": 17,
    "destination": "Broombridge",
    "direction": "Inbound",
    "expectedArrivalTime": "2019-09-23T18:05:19.000+01:00",
  },
]
`;
